# dustrac-fuzzy

./: .gitignore  CMakeLists.txt  INSTALL  InstallLinux.cmake  InstallWindows.cmake  configure  dustrac-game.pro  dustrac.pro
cmake/Modules/: Findfuzzylite.cmake
data/: controller.fis
data/levels/: playground.trk
src/common/: config.cpp  config.hpp  export.hpp  pathresolver.cpp  pathresolver.hpp
src/editor/: CMakeLists.txt  editor.pro
src/game/: CMakeLists.txt  ai.cpp  ai.hpp  aifactory.cpp  aifactory.hpp  car.cpp  car.hpp  carcontroller.cpp  carcontroller.hpp  config.hpp  fadeanimation.cpp  fuzzycontroller.cpp  fuzzycontroller.hpp  game.cpp  game.hpp  game.pro  listener.hpp  listenerbank.cpp  listenerbank.hpp  loadplugins.cpp  loadplugins.hpp  main.cpp  overlaybase.hpp  pidcontroller.cpp  pidcontroller.hpp  piddata.cpp  piddata.hpp  plugininterface.hpp  race.cpp  race.hpp  renderer.cpp  renderer.hpp  resolutionmenu.cpp  scene.cpp  scene.hpp  settings.cpp  settings.hpp  settingsmenu.cpp  shaderprogram.cpp  shaderprogram.hpp  (+11 more)
src/game/MTFH/: CMakeLists.txt  menuitemaction.hpp
src/game/MiniCore/Core/: mclogger.cc
src/game/MiniCore/Graphics/: MCGLEW  mcglobjectbase.cc  mcglobjectbase.hh  mcglpointparticlerenderer.cc  mcglpointparticlerenderer.hh  mcglscene.cc  mcglscene.hh  mcglshaderprogram.cc  mcglshaderprogram.hh  mcmesh.cc  mcmesh.hh  mcmeshloader.cc  mcmeshloader.hh  mcmeshmanager.cc  mcrenderobjectbase.cc  mcrenderobjectbase.hh  mcsurface.cc  mcsurface.hh  mcsurfacemanager.cc
src/game/MiniCore/Particles/: mcglrectparticle.cc  mcglrectparticle.hh
src/game/STFH/: CMakeLists.txt
src/game_plugins/: CMakeLists.txt
src/game_plugins/fuzzy_controller/: CMakeLists.txt  controller.fis  fuzzycontroller.cpp  fuzzycontroller.hpp  loader.cpp  loader.hpp
src/game_plugins/fuzzy_controller/Modules/: Findfuzzylite.cmake
src/game_plugins/python_controller/: CMakeLists.txt  bindings.py  controller.py  loader.cpp  loader.hpp  pydata.cpp  pydata.hpp  pylistener.cpp  pylistener.hpp  pythoncontroller.cpp  pythoncontroller.hpp  pythonexception.cpp  pythonexception.hpp
